Header, Sidebar, Breadcrumbs y contenido principal

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -66,19 +66,19 @@
                                         <a href="#">
                                             <div class="user-img"> <img src="../assets/images/users/1.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
                                             <div class="mail-contnet">
-                                                <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:30 AM</span> </div>
+                                                <h5>Pavan kumar</h5> <span class="mail-desc">¡Solo mira a mi administrador!</span> <span class="time">9:30 AM</span> </div>
                                         </a>
                                         <!-- Message -->
                                         <a href="#">
                                             <div class="user-img"> <img src="../assets/images/users/2.jpg" alt="user" class="img-circle"> <span class="profile-status busy pull-right"></span> </div>
                                             <div class="mail-contnet">
-                                                <h5>Sonu Nigam</h5> <span class="mail-desc">I've sung a song! See you at</span> <span class="time">9:10 AM</span> </div>
+                                                <h5>Sonu Nigam</h5> <span class="mail-desc">¡He cantado una canción! Te veo en</span> <span class="time">9:10 AM</span> </div>
                                         </a>
                                         <!-- Message -->
                                         <a href="#">
                                             <div class="user-img"> <img src="../assets/images/users/3.jpg" alt="user" class="img-circle"> <span class="profile-status away pull-right"></span> </div>
                                             <div class="mail-contnet">
-                                                <h5>Arijit Sinh</h5> <span class="mail-desc">I am a singer!</span> <span class="time">9:08 AM</span> </div>
+                                                <h5>Arijit Sinh</h5> <span class="mail-desc">¡Soy un cantante!</span> <span class="time">9:08 AM</span> </div>
                                         </a>
                                         <!-- Message -->
                                         <a href="#">
@@ -119,7 +119,7 @@
                                 </li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#"><i class="ti-user"></i> Mi Perfil</a></li>
-                                <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
+                                <li><a href="#"><i class="ti-wallet"></i> Mi balance</a></li>
                                 <li><a href="#"><i class="ti-email"></i> Mensajes</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#"><i class="ti-settings"></i> Configuracion de cuenta</a></li>
