--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,34 @@
 
     <app-sidebar></app-sidebar>
 
+    <!-- ============================================================== -->
+    <!-- Page wrapper  -->
+    <!-- ============================================================== -->
+    <div class="page-wrapper">
+        <!-- Container fluid  -->
+        <div class="container-fluid">
+
+          <app-breadcrumbs></app-breadcrumbs>
+
+          <!-- ============================================================== -->
+          <!-- Start Page Content -->
+          <!-- ============================================================== -->
+          <div class="row">
+              <div class="col-12">
+                  <div class="card">
+                      <div class="card-body">
+                          Este es un texto dentro de un bloque de tarjeta.
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <!-- ============================================================== -->
+          <!-- End PAge Content -->
+          <!-- ============================================================== -->
+
+        </div>
+        <!-- end Container fluid  -->
+    </div>
+    <!-- End Page wrapper  -->
+
 </div>
