--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,12 +14,15 @@
         <!-- Container fluid  -->
         <div class="container-fluid">
 
-          <app-breadcrumbs></app-breadcrumbs>
+            <app-breadcrumbs></app-breadcrumbs>
 
-          <!-- ============================================================== -->
-          <!-- Start Page Content -->
-          <!-- ============================================================== -->
-          <div class="row">
+            <!-- ============================================================== -->
+            <!-- Start Page Content -->
+            <!-- ============================================================== -->
+
+            <router-outlet></router-outlet>
+
+            <!-- <div class="row">
               <div class="col-12">
                   <div class="card">
                       <div class="card-body">
@@ -27,10 +30,10 @@
                       </div>
                   </div>
               </div>
-          </div>
-          <!-- ============================================================== -->
-          <!-- End PAge Content -->
-          <!-- ============================================================== -->
+          </div> -->
+            <!-- ============================================================== -->
+            <!-- End PAge Content -->
+            <!-- ============================================================== -->
 
         </div>
         <!-- end Container fluid  -->
