--- a/src/app/shared/nopagefound/nopagefound.component.html
+++ b/src/app/shared/nopagefound/nopagefound.component.html
@@ -1,3 +1,28 @@
-<p>
-  nopagefound works!
-</p>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="error-pages">
+
+                <h1>
+                    Oops!
+                </h1>
+
+                <h2>
+                    404 No encontrado
+                </h2>
+
+                <img class="animated bounce infinite" src="https://thumbs.dreamstime.com/t/error-del-sello-en-el-canal-blanco-alfa-44568260.jpg">
+
+                <div class="error-details">
+                    Lo sentimos, se ha producido un error, no se ha encontrado la pagina solicitada.
+                </div> <br>
+
+                <div class="error-actions">
+                    <a href="/" class="btn btn-primary btn-group-lg"><span class=glyphicon glyphicon-home></span> Regresar</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
