--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -55,7 +55,7 @@
                     <!-- ============================================================== -->
                     <li class="nav-item dropdown">
 
-                        <div class="dropdown-menu mailbox dropdown-menu-right animated bounceInDown" aria-labelledby="2">
+                        <div class="dropdown-menu mailbox dropdown-menu-right animated fadeIn" aria-labelledby="2">
                             <ul>
                                 <li>
                                     <div class="drop-title">Tienes 4 mensajes nuevos</div>
@@ -107,7 +107,7 @@
                     <!-- Perfil -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../assets/images/users/1.jpg" alt="user" class="profile-pic" /></a>
-                        <div class="dropdown-menu dropdown-menu-right animated flipInY">
+                        <div class="dropdown-menu dropdown-menu-right animated fadeIn">
                             <ul class="dropdown-user">
                                 <li>
                                     <div class="dw-user-box">
