--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Email">
+                        <input class="form-control" type="email" required="" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group ">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        <p>¿Ya tienes una cuenta? <a href="pages-login-2.html" class="text-info m-l-5"><b>Registrarse</b></a></p>
+                        <p>¿Ya tienes una cuenta? <a href="/" class="text-info m-l-5"><b>Registrarse</b></a></p>
                     </div>
                 </div>
             </form>
@@ -51,5 +51,4 @@
 </section>
 <!-- ============================================================== -->
 <!-- End Wrapper -->
-<!-- ============================================================== -->
 <!-- ============================================================== -->
