--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,94 +5,14 @@
         <!-- Sidebar navigation-->
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
-                <!--<li class="user-profile">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="../assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
-                    <ul aria-expanded="false" class="collapse">
-                        <li><a href="javascript:void()"> Myi Perfil </a></li>
-                        <li><a href="javascript:void()">My Balance</a></li>
-                        <li><a href="javascript:void()">Inbox</a></li>
-                        <li><a href="javascript:void()">Account Setting</a></li>
-                        <li><a href="javascript:void()">Logout</a></li>
-                    </ul>
-                </li>-->Ad
-                <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Tablero <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
+
+                <li *ngFor="let menu of _sidebar.menu">
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i [class]="menu.icono"></i><span class="hide-menu"> {{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right"> {{ menu.submenu.length }} </span></span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a href="index.html">Mínimo </a></li>
-                        <li><a href="index2.html">Analítico</a></li>
-                        <li><a href="index3.html">Demográfico</a></li>
-                        <li><a href="index4.html">Moderno</a></li>
-                    </ul>
-                </li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Aplicaciones</span></a>
-                    <ul aria-expanded="false" class="collapse">
-                        <li><a href="app-calendar.html">Calendario</a></li>
-                        <li><a href="app-chat.html">Aplicación de chat</a></li>
-                        <li><a href="app-ticket.html">Boleto de soporte</a></li>
-                        <li><a href="app-contact.html">Contacto / Empleado</a></li>
-                        <li><a href="app-contact2.html">Contacto de cuadrícula</a></li>
-                        <li><a href="app-contact-detail.html">Detalles del contacto</a></li>
-                    </ul>
-                </li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Bandeja de entrada</span></a>
-                    <ul aria-expanded="false" class="collapse">
-                        <li><a href="app-email.html">Buzón</a></li>
-                        <li><a href="app-email-detail.html">Detalle del buzón</a></li>
-                        <li><a href="app-compose.html">Redactar correo</a></li>
-                    </ul>
-                </li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-chart-bubble"></i><span class="hide-menu">Ui Elements <span class="label label-rouded label-danger pull-right">25</span></span></a>
-                    <ul aria-expanded="false" class="collapse">
-                        <li><a href="ui-cards.html">Tarjetas</a></li>
-                        <li><a href="ui-user-card.html">Tarjetas de usuario</a></li>
-                        <li><a href="ui-buttons.html">Botones</a></li>
-                        <li><a href="ui-modals.html">Modals</a></li>
-                        <li><a href="ui-tab.html">Tab</a></li>
-                        <li><a href="ui-tooltip-popover.html">Tooltip &amp; Popover</a></li>
-                        <li><a href="ui-tooltip-stylish.html">Tooltip stylish</a></li>
-                        <li><a href="ui-sweetalert.html">Sweet Alert</a></li>
-                        <li><a href="ui-notification.html">Notification</a></li>
-                        <li><a href="ui-progressbar.html">Progressbar</a></li>
-                        <li><a href="ui-nestable.html">Nestable</a></li>
-                        <li><a href="ui-range-slider.html">Range slider</a></li>
-                        <li><a href="ui-timeline.html">Timeline</a></li>
-                        <li><a href="ui-typography.html">Typography</a></li>
-                        <li><a href="ui-horizontal-timeline.html">Horizontal Timeline</a></li>
-                        <li><a href="ui-session-timeout.html">Session Timeout</a></li>
-                        <li><a href="ui-session-ideal-timeout.html">Session Ideal Timeout</a></li>
-                        <li><a href="ui-bootstrap.html">Bootstrap Ui</a></li>
-                        <li><a href="ui-breadcrumb.html">Breadcrumb</a></li>
-                        <li><a href="ui-bootstrap-switch.html">Bootstrap Switch</a></li>
-                        <li><a href="ui-list-media.html">List Media</a></li>
-                        <li><a href="ui-ribbons.html">Ribbons</a></li>
-                        <li><a href="ui-grid.html">Grid</a></li>
-                        <li><a href="ui-carousel.html">Carousel</a></li>
-                        <li><a href="ui-date-paginator.html">Date-paginator</a></li>
-                        <li><a href="ui-dragable-portlet.html">Dragable Portlet</a></li>
-                    </ul>
-                </li>
-                <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Formularios</span></a>
-                    <ul aria-expanded="false" class="collapse">
-                        <li><a href="form-basic.html">Basic Forms</a></li>
-                        <li><a href="form-layout.html">Form Layouts</a></li>
-                        <li><a href="form-addons.html">Form Addons</a></li>
-                        <li><a href="form-material.html">Form Material</a></li>
-                        <li><a href="form-float-input.html">Floating Lable</a></li>
-                        <li><a href="form-pickers.html">Form Pickers</a></li>
-                        <li><a href="form-upload.html">File Upload</a></li>
-                        <li><a href="form-mask.html">Form Mask</a></li>
-                        <li><a href="form-validation.html">Form Validation</a></li>
-                        <li><a href="form-dropzone.html">File Dropzone</a></li>
-                        <li><a href="form-icheck.html">Icheck control</a></li>
-                        <li><a href="form-img-cropper.html">Image Cropper</a></li>
-                        <li><a href="form-bootstrapwysihtml5.html">HTML5 Editor</a></li>
-                        <li><a href="form-typehead.html">Form Typehead</a></li>
-                        <li><a href="form-wizard.html">Form Wizard</a></li>
-                        <li><a href="form-xeditable.html">Xeditable Editor</a></li>
-                        <li><a href="form-summernote.html">Editor de Summernote</a></li>
-                        <li><a href="form-tinymce.html">Editor de Tinymce</a></li>
+                        <li *ngFor="let submenu of menu.submenu">
+                            <a routerLinkActive="active" [routerLink]="[ submenu.url ]"> {{ submenu.titulo }} </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
