--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,20 +2,22 @@
     <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
         <div class="login-box card">
             <div class="card-body">
-                <div class="form-horizontal form-material" id="loginform" action="index.html">
+                <form ngNativeValidate #f="ngForm" class="form-horizontal form-material" (ngSubmit)="ingresar( f )">
                     <h3 class="box-title m-b-20">Sign In</h3>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Username"> </div>
+                            <input [ngModel]="login" name="login" class="form-control" type="text" required placeholder="Usuario">
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Password"> </div>
+                            <input ngModel name="clave" class="form-control" type="password" required placeholder="Contraseña">
+                        </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-md-12">
                             <div class="checkbox checkbox-info pull-left p-t-0">
-                                <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
+                                <input [(ngModel)]="recuerdame" name="recuerdame" id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
                                 <label for="checkbox-signup"> Recordarme </label>
                             </div>
 
@@ -26,7 +28,7 @@
                             <button class="btn btn-block btn-lg btn-info btn-rounded" type="submit">Ingresar</button>
                         </div>
                     </div>
-                </div>
+                </form>
 
             </div>
         </div>
