--- a/src/app/pages/usuarios/usuario.component.html
+++ b/src/app/pages/usuarios/usuario.component.html
@@ -98,6 +98,14 @@
                             </div>
                             <!--/span-->
                         </div>
+                        <div class="row">
+                            <div class="col-md-12 ">
+                                <div class="checkbox checkbox-primary p-t-0">
+                                    <input name="condiciones" id="checkbox-signup" type="checkbox">
+                                    <label for="checkbox-signup"> Estoy de acuerdo con los <a href="#">términos</a></label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-actions">
                         <button type="submit" class="btn btn-success"> <i class="fa fa-check"></i> Save</button>
