--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
                         <div class="col-md-12">
                             <div class="checkbox checkbox-info pull-left p-t-0">
                                 <input [(ngModel)]="recuerdame" name="recuerdame" id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
-                                <label for="checkbox-signup"> Recordarme </label>
+                                <label for="checkbox-signup"> Recuérdame </label>
                             </div>
 
                         </div>
